--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
             <artifactId>json</artifactId>
             <version>20090211</version>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>org.nibor.autolink</groupId>
             <artifactId>autolink</artifactId>
             <version>0.5.0</version>
@@ -34,7 +34,7 @@
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.8.3</version>
-        </dependency>-->
+        </dependency>
     </dependencies>
 
 </project>
