--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,18 @@
             </plugin>
         </plugins>
     </build>
-    <groupId>Part1</groupId>
+
+    <groupId>Part2</groupId>
     <artifactId>CS172</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.0</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
